{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "OnFoot",
            "id": "75de06a4-270f-4d65-ba3a-396d7e90a1af",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "9fc95d53-07f6-4ad1-a899-b1abdcedf8ae",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "ac7517d9-6a28-4840-83dd-da9a0cb12ffd",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Inventory",
                    "type": "Button",
                    "id": "c939fe99-4ff2-40e8-b7e0-975442e89ad7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "00d9517e-cbff-497b-a97c-f1274c4b5721",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Command",
                    "type": "Button",
                    "id": "b482136f-6c5f-4a5e-b599-c4500996771c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AltHeld",
                    "type": "Value",
                    "id": "e69b367a-bb04-4bea-8828-6aa6780ede99",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Slot 1",
                    "type": "Button",
                    "id": "7607687a-5004-4b31-bf30-7eed2c438d47",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Slot 2",
                    "type": "Button",
                    "id": "6fd75389-0137-42f9-b91d-5f3b3542796a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Slot 3",
                    "type": "Button",
                    "id": "26b424dd-56dd-4101-98f9-618ce9f08519",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Slot 4",
                    "type": "Button",
                    "id": "9faeb6f4-db75-46f5-97a4-46db392ae398",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Slot 5",
                    "type": "Button",
                    "id": "3ac84293-cb27-404e-9f65-6ccd2a64e2ea",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "47fc8d74-08e7-4242-af5c-643838a36cff",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "8902ec2d-a19c-4d9a-a3fd-35bb424fca8b",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "8abd7a9c-8fdf-45e4-bf14-18332c5a6ed5",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "14529d50-d5e8-4411-ada7-f8d03c7cb6a0",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "f2cefedf-fb54-4296-bc43-086260814888",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "47bfeeb7-493b-41d7-ade8-21a7145efbd1",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0254d874-01dd-4b86-9650-7b877477c227",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Inventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f00a22f9-363d-44f1-9811-28057b2deabb",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7abe8b60-ad8c-4ce8-8400-0bb84438efe5",
                    "path": "<Keyboard>/slash",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Command",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e5f71ad1-fedb-47ad-8ef0-7eaa7fc12189",
                    "path": "<Keyboard>/alt",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AltHeld",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "05a6dbb6-43fe-4778-bcea-cc35d79e1172",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slot 5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a9beec66-ffc3-47f1-89f1-f0c8b7c5d2d1",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slot 4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7fed2193-524c-45b2-b48c-c0bbbdecdadc",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slot 3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "be5f47db-d4a0-4038-96a5-dc3da60d116d",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slot 2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5daecb90-6602-4c4b-8f70-781284869c96",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slot 1",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Inventory",
            "id": "df500ad6-2680-4b6e-8cda-2df47bdcb880",
            "actions": [
                {
                    "name": "Close",
                    "type": "Button",
                    "id": "1dab1a06-57c1-4f9e-88ce-2b646c6fc1dc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "afcac640-7983-4aff-8b1d-3acb1dce3d81",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseClick",
                    "type": "Button",
                    "id": "09869ce0-a587-4e7b-8912-c99834b038db",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Shift",
                    "type": "Value",
                    "id": "133f41c0-1a9c-4ef9-b5be-c95d39eaee54",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d8340ae3-0596-4f78-b019-d38cb9d6d9ac",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Close",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7760eda9-b55f-41b7-bc4e-4eb941c3c480",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "76a61f2d-b4ff-4e77-a998-022d58299127",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e117168f-1b40-447e-83e2-cfa43079ffb9",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shift",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "CommandBox",
            "id": "5f8192c1-10b7-4e68-9f16-634279f8c204",
            "actions": [
                {
                    "name": "SendCommand",
                    "type": "Button",
                    "id": "1d621544-0161-447c-b7dd-0069772637b8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Exit",
                    "type": "Button",
                    "id": "40a65486-d9fb-4b77-aaa8-b96803c60abc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a6c12412-c7e5-4386-a330-042db03de8ca",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SendCommand",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "52a4f9e5-e6a7-479a-84c0-0851f2f80d4b",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Exit",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "LatheMenu",
            "id": "7bb6ff95-ff40-49b9-920f-0778d3f00b43",
            "actions": [
                {
                    "name": "Close",
                    "type": "Button",
                    "id": "2b7e2e6c-1b29-4acf-b6c5-adcddc7344d1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "afea916f-262a-482c-8904-81121a4a33f5",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Close",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "ResearchTable",
            "id": "804bcdf3-1183-4122-833e-ea5dbb429be5",
            "actions": [
                {
                    "name": "Close",
                    "type": "Button",
                    "id": "0e1974d0-bcfe-4f19-92d0-b19633c0ef9a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2b8fdfac-ae37-43cb-b90f-dae2fe166aa9",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Close",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "DailyLog",
            "id": "a32ae72e-a46d-4829-b84a-d15a50c83700",
            "actions": [
                {
                    "name": "Close",
                    "type": "Button",
                    "id": "6cc8a0db-9c25-43d6-9e46-8ccea1d81ffc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "89919230-52c8-4494-9f65-7288475d144b",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Close",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "TechComputer",
            "id": "e73c70d6-90a9-420c-a40e-da6f4e241655",
            "actions": [
                {
                    "name": "Close",
                    "type": "Button",
                    "id": "04facd3e-b6a3-4937-9a6a-1551988f8668",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "79774a30-c76f-494b-bc20-733fbce53a5c",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Close",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}